// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Component should handle children as a label: children label checkbox 1`] = `
<checkbox
  props="{
  "children": [
    {}
  ],
  "ariaLabel": null,
  "id": null,
  "isChecked": false,
  "isDisabled": false,
  "isReadOnly": false,
  "label": "",
  "name": null
}"
>
  <div
    class="pf-c-check"
  >
    <input
      aria-invalid="false"
      aria-label="lorem ipsum"
      class="pf-c-check__input"
      data-ouia-component-id="OUIA-Generated-Checkbox-6"
      data-ouia-component-type="PF4/Checkbox"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      type="checkbox"
      value=""
    />
    <label
      class="pf-c-check__label"
      for="generatedid-"
    >
      lorem ipsum
    </label>
  </div>
</checkbox>
`;

exports[`Checkbox Component should handle readOnly, disabled, checked: active 1`] = `
<input
  aria-invalid="false"
  aria-label=""
  class="pf-c-check__input"
  data-ouia-component-id="OUIA-Generated-Checkbox-4"
  data-ouia-component-type="PF4/Checkbox"
  data-ouia-safe="true"
  id="generatedid-"
  name="generatedid-"
  type="checkbox"
  value=""
/>
`;

exports[`Checkbox Component should handle readOnly, disabled, checked: checked 1`] = `
<input
  aria-invalid="false"
  aria-label=""
  checked=""
  class="pf-c-check__input"
  data-ouia-component-id="OUIA-Generated-Checkbox-5"
  data-ouia-component-type="PF4/Checkbox"
  data-ouia-safe="true"
  id="generatedid-"
  name="generatedid-"
  type="checkbox"
  value=""
/>
`;

exports[`Checkbox Component should handle readOnly, disabled, checked: disabled 1`] = `
<input
  aria-invalid="false"
  aria-label=""
  class="pf-c-check__input"
  data-ouia-component-id="OUIA-Generated-Checkbox-3"
  data-ouia-component-type="PF4/Checkbox"
  data-ouia-safe="true"
  disabled=""
  id="generatedid-"
  name="generatedid-"
  type="checkbox"
  value=""
/>
`;

exports[`Checkbox Component should handle readOnly, disabled, checked: readOnly 1`] = `
<input
  aria-invalid="false"
  aria-label=""
  class="pf-c-check__input"
  data-ouia-component-id="OUIA-Generated-Checkbox-2"
  data-ouia-component-type="PF4/Checkbox"
  data-ouia-safe="true"
  id="generatedid-"
  name="generatedid-"
  readonly=""
  type="checkbox"
  value=""
/>
`;

exports[`Checkbox Component should render a basic component: basic component 1`] = `
<checkbox
  props="{
  "ariaLabel": null,
  "children": [],
  "id": null,
  "isChecked": false,
  "isDisabled": false,
  "isReadOnly": false,
  "label": "",
  "name": null
}"
>
  <div
    class="pf-c-check pf-m-standalone"
  >
    <input
      aria-invalid="false"
      aria-label=""
      class="pf-c-check__input"
      data-ouia-component-id="OUIA-Generated-Checkbox-1"
      data-ouia-component-type="PF4/Checkbox"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      type="checkbox"
      value=""
    />
  </div>
</checkbox>
`;

exports[`Checkbox Component should return an emulated onChange event: emulated event, change 1`] = `
[
  [
    {
      "checked": true,
      "currentTarget": <input
        aria-invalid="false"
        aria-label="lorem ipsum"
        class="pf-c-check__input"
        data-ouia-component-id="OUIA-Generated-Checkbox-7"
        data-ouia-component-type="PF4/Checkbox"
        data-ouia-safe="true"
        id="generatedid-"
        name="generatedid-"
        type="checkbox"
        value=""
      />,
      "id": "generatedid-",
      "keyCode": undefined,
      "name": "generatedid-",
      "persist": [Function],
      "target": <input
        aria-invalid="false"
        aria-label="lorem ipsum"
        class="pf-c-check__input"
        data-ouia-component-id="OUIA-Generated-Checkbox-7"
        data-ouia-component-type="PF4/Checkbox"
        data-ouia-safe="true"
        id="generatedid-"
        name="generatedid-"
        type="checkbox"
        value=""
      />,
      "value": undefined,
    },
  ],
]
`;
